# GenericAlgorithms

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
GenericAlgos/: CMakeLists.txt  GeneralAlgorithmsAndDataStructures.cpp  GeneralAlgorithmsAndDataStructures.h  Heap.h  SuffixArray.cpp  SuffixArray.h
PermutationVisualizer/: CMakeLists.txt  PermutationVisualizer.cpp
SimpleAlgoUT/: CMakeLists.txt  HeapUT.cpp  SimpleAlgosUT.cpp  SuffixArrayUT.cpp
